@@ -1,6 +1,8 @@
 === HEAD
 
-* Add multi_insert_ignore to the MySQL adapter, used for skipping errors when inserting multiple records at once (dusty)
+* Add multi_insert_update to the MySQL adapter, used for setting specific update behavior when an error occurs when using multi_insert (dusty)
+
+* Add multi_insert_ignore to the MySQL adapter, used for skipping errors on row inserts when using multi_insert (dusty)
 
 * Add Sequel::MySQL.convert_invalid_date_time accessor for dealing with dates like "0000-00-00" and times like "25:00:00" (jeremyevans, epugh)
 
